linked css to index.html tested

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Catmosphere Cat Cafe location, menu and booking. Dublin, Ireland">
+    <meta name="keywords" content="catmosphere, cat cafe, coffee, bakery, cat, fundraiser, dublin, ireland">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Catmosphere</title>
 </head>
 <body>
     <h1>hello hello this is a test check check one two </h1>
