add placeholder nav bar

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <title>Catmosphere</title>
 </head>
 <body>
-    <h1>hello hello this is a test check check one two </h1>
+    <header><a href="index.html">
+        <h1 id="logo">Catmosphere</h1>
+    </a>
+    <nav>
+        <ul id="menu">
+            <li><a href="make-a-reservation.html">Make a Reservation</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="index.html" class="active">Home</a></li>  
+        </ul>
+    </nav>
+</header>
 </body>
 </html>
