--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
     </a>
     <nav>
         <ul id="menu">
-            <li><a href="make-a-reservation.html">Make a Reservation</a></li>
+            <li><a href="book-in.html">Book in</a></li>
             <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="menu.html">Menu</a></li>
             <li><a href="index.html" class="active">Home</a></li>  
         </ul>
     </nav>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+        <div id="cover-text">
+        
+    </section>
 </header>
 </body>
 </html>
