--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </ul>
     </nav>
     <section id="hero-outer">
-        <div id="hero-image"></div>
-        <div id="cover-text">
+        <div id="hero-image"img src="FullSize.jpg" style="width:100%;height:100%;" alt=""  ></div>
+    
         
     </section>
 </header>
