try different hero images and try different fonts and sizes

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     
         
     </section>
+
 </header>
+<section> <h1>Come enjoy some coffee, snacks and hangout with cats</h1> </section>
+<section> <h1></h1> </section>
 </body>
 </html>
