add menu placeholder elements

--- a/menu.html
+++ b/menu.html
@@ -29,6 +29,57 @@
         <div id="hero-image"></div>
         <div id="cover-text">
 </section>
+<section class="menu-section">
+    <h2 class="menu-title text-center title-font"> Cafe Menu </h2>
+    <div class="menu-split ">
+        <div class="menu-left">
+            <h3 class="title-font">Baked Goods</h3>
+            <p>Brownie</p>
+            <p></p>
+            <p>apple tart</p>
+            <p></p>
+            <p>cheesecake</p>
+            <p></p>
+            <p>maccaroon</p>
+            <p></p>
+            <hr class="menu-hr">
+            
+            <hr class="menu-hr">
+            <h3 class="title-font">Hot Drinks</h3>
+            <p>coffee</p>
+            <p>latte</p>
+            <p>flat </p>
+            <p>Cappuchino</p>
+            <p>tea</p>
+            <p>green tea</p>
+            <p>hot choc</p>
+            <p>mocha</p>
+        </div>
+<div class="menu-right">
+            <h3 class="title-font">Price</h3>
+            <p>€10.50</p>
+            <p>------</p>
+            <p>€12.50</p>
+            <p>------</p>
+            <p>€10.50</p>
+            <p>------</p>
+            <p>€11.50</p>
+            <p>------</p>
+            <hr>
+            <h3 class="title-font">Price</h3>
+            <p>€10.50</p>
+            <p>------</p>
+            <p>€12.50</p>
+            <p>------</p>
+            <p>€12.50</p>
+            <p>------</p>
+            <p>€14.50</p>
+            <p>------</p>
+            <hr>
+            
+        </div>
+    </div>
+</section>
 </header>
 <footer>
     <ul class="social-networks"> 
