add menu details and line up contents

--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,13 @@
     <section id="hero-outer">
         <div id="hero-image"></div>
         <div id="cover-text"></section>
+            <div class="image-grid">
+                <img class="image-grid-col-2 image-grid-row-2" src="" alt="">
+                <img src="assets/images/cafe-interior.jpg" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
 </header>
 
 <footer>
