--- a/index.html
+++ b/index.html
@@ -31,27 +31,27 @@
         <h2></h2>
         <h3></h3></div>
     </section>
-    <section id="about-us">
-        <div id="left-about">
+    <section id="about-us"> 
+        <div id="about-div">
             <div class="what-we-do">
                 <h2>What we do</h2>
                 <hr>
             <p>We are a small charity cat cafe based in Dublin, serving coffee and baked goodies. We also host hangout sessions with the current kitty residences, you can book in to make a reservation. All profits go towards helping strays get back to good health and find forever homes. </p>
         </div>
         <div class="meet-the-cats">
-            <h2>Meet the Cats </h2>
+            <h2>House rules</h2>
             <hr>
         <p>place holder for mozaic of cat photos.</p>
     </div>
         </div>
-        <div id="right-about">
+        <div id=>
             <div class="menu">
                 <h2>Menu</h2>
                 <hr>
-                <p>Place holder for menu </p>
+                <p>Place holder for menu link</p>
             </div>
             <div class="booking">
-                <h2>Book In</h2>
+                <h2>Book In link</h2>
                 <hr>
                 <p>placeholder for book in button link</p>
             </div>
