add gallery images chsnge hero image for each page

--- a/book-in.html
+++ b/book-in.html
@@ -26,8 +26,8 @@
         </ul>
     </nav>
     <section id="hero-outer">
-        <div id="hero-image"></div>
-        <div id="cover-text">
+        <div id="hero-image-book-in"></div>
+
         </section>
 
     <form action="reservation.php" method="post">
@@ -63,10 +63,9 @@
         <div class="elem-group">
           <label for="cat-selection">Select Cat Preference</label>
           <select id="cat-selection" name="cat_preference" required>
-              <option value="">Choose a cat from the List</option>
-              <option value="cat1">cat1</option>
-              <option value="cat2">cat2</option>
-              <option value="cat3">cat3</option>
+              <option value="">Choose preference</option>
+              <option value="cat1">Kitten</option>
+              <option value="cat2">Cat</option>
           </select>
         </div>
         <hr>
