--- a/gallery.html
+++ b/gallery.html
@@ -26,15 +26,28 @@
         </ul>
     </nav>
     <section id="hero-outer">
-        <div id="hero-image"></div>
-        <div id="cover-text"></section>
-            <div class="image-grid">
-                <img class="image-grid-col-2 image-grid-row-2" src="" alt="">
-                <img src="assets/images/cafe-interior.jpg" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
+        <div id="hero-image-gallery"></div>
+        
+        </section>
+        <section id= "photos">
+            <img src="assets/images/cat-1.jpg" alt="">
+            <img src="assets/images/cat-2.jpg" alt="">
+            <img src="assets/images/cat-3.jpg" alt="">
+            <img src="assets/images/cat-4.jpg" alt="">
+            <img src="assets/images/yawning-cats.jpg" alt="">
+            <img src="assets/images/Brownie.jpg" alt="">
+            <img src="assets/images/Coffee.jpg" alt="">
+            <img src="assets/images/cat-cafe-1.jpg" alt="">
+            <img src="assets/images/cat-5.jpg" alt="">
+            <img src="assets/images/cat-6.jpg" alt="">
+            <img src="assets/images/cat-7.jpg" alt="">
+            <img src="assets/images/cat-cafe-2.jpg" alt="">
+            <img src="assets/images/cat-cafe-3.jpg" alt="">
+            <img src="assets/images/cat-cafe-4.jpg" alt="">
+            <img src="assets/images/Choc-cheesecake.jpg" alt="">
+            <img src="assets/images/Mocha.jpg" alt="">
+            <img src="assets/images/cat-8.jpg" alt="">
+            </section>
 </header>
 
 <footer>
