--- a/index.html
+++ b/index.html
@@ -27,14 +27,11 @@
     </nav>
     <section id="hero-outer">
         <div id="hero-image"></div>
-        <div id="cover-text">
-        <h2></h2>
-        <h3></h3></div>
     </section>
     <section id="about-us"> 
         <div id="about-div">
             <div class="what-we-do">
-                <h2>What we do</h2>
+                <h2>About Us</h2>
                 <hr>
             <p>We are a small charity cat cafe based in Dublin, serving coffee and baked goodies. We also host hangout sessions with the current kitty residences, you can book in to make a reservation. All profits go towards helping strays get back to good health and find forever homes. </p>
         </div>
