adjust font size for media queries

--- a/index.html
+++ b/index.html
@@ -31,26 +31,35 @@
     <section id="about-us"> 
         <div id="about-div">
             <div class="what-we-do">
-                <h2>About Us</h2>
+                <h2>About Us   <i class="fa-solid fa-cat"></i></h2>
                 <hr>
-            <p>We are a small charity cat cafe based in Dublin, serving coffee and baked goodies. We also host hangout sessions with the current kitty residences, you can book in to make a reservation. All profits go towards helping strays get back to good health and find forever homes. </p>
+            <p>We are a small charity cat cafe based in Dublin, serving coffee and baked goodies. We also host hangout sessions with the current kitty residences, you can book in to make a reservation. All profits go towards helping strays get back to good health and find forever homes. 
+                <br> Please feel free to contact us at catmosphere@catcafe.ie or follow our social media links below. We look forward to meeting meow.
+            </p>
         </div>
-        <div class="meet-the-cats">
-            <h2>House rules</h2>
+        <div class="house-rules">
+            <h2>House rules   <i class="fa-solid fa-scale-balanced"></i></h2>
             <hr>
-        <p>place holder for mozaic of cat photos.</p>
+        <p>We respectfully request that visitors leave their dogs at home.
+            <br>
+        Catnip is strictly prohibited within the property, its not that kind of cafe.
+            <br>
+        Please do not feed the cat inhabitants no matter how hard they may persuade you, they are well fed.
+            <br>
+        No flash photography.
+        </p>
     </div>
         </div>
         <div id=>
             <div class="menu">
-                <h2>Menu</h2>
+                <h2>Menu   <i class="fa-solid fa-mug-hot"></i></h2>
                 <hr>
-                <p>Place holder for menu link</p>
+                <p><a href="menu.html">Check out our menu</a> </p>
             </div>
             <div class="booking">
-                <h2>Book In link</h2>
+                <h2>Book In    <i class="fa-solid fa-book"></i></h2>
                 <hr>
-                <p>placeholder for book in button link</p>
+                <p><a href="book-in.html">Make a booking</a></p>
             </div>
         </div>
 </header>
