--- a/menu.html
+++ b/menu.html
@@ -30,13 +30,13 @@
 </section>
 <section class="menu-section">
     <h2 class="menu-title text-center "><i class="fa-solid fa-mug-hot"></i> Cafe Menu <i class="fa-solid fa-mug-hot"></i></h2>
-    <div class="menu-split ">
+    <div class="menu-split">
         <div class="menu-left">
-            <h3 class="title-font">Hot Drinks & Baked Goodies </h3>
+            <h3 class="menu-title-font">Hot Drinks & Baked Goodies </h3>
             <p>Coffee</p>
             <p>Latte</p>
             <p>Flat </p>
-            <p>Cappuchino</p>
+            <p>Cappuccino</p>
             <p>Tea</p>
             <p>Green tea</p>
             <p>Hot choc</p>
