add alt descriptions to gallery contents

--- a/gallery.html
+++ b/gallery.html
@@ -30,23 +30,23 @@
         
         </section>
         <section id= "photos">
-            <img src="assets/images/cat-1.jpg" alt="">
-            <img src="assets/images/cat-2.jpg" alt="">
-            <img src="assets/images/cat-3.jpg" alt="">
-            <img src="assets/images/cat-4.jpg" alt="">
-            <img src="assets/images/yawning-cats.jpg" alt="">
-            <img src="assets/images/Brownie.jpg" alt="">
-            <img src="assets/images/Coffee.jpg" alt="">
-            <img src="assets/images/cat-cafe-1.jpg" alt="">
-            <img src="assets/images/cat-5.jpg" alt="">
-            <img src="assets/images/cat-6.jpg" alt="">
-            <img src="assets/images/cat-7.jpg" alt="">
-            <img src="assets/images/cat-cafe-2.jpg" alt="">
-            <img src="assets/images/cat-cafe-3.jpg" alt="">
-            <img src="assets/images/cat-cafe-4.jpg" alt="">
-            <img src="assets/images/Choc-cheesecake.jpg" alt="">
-            <img src="assets/images/Mocha.jpg" alt="">
-            <img src="assets/images/cat-8.jpg" alt="">
+            <img src="assets/images/cat-1.jpg" alt="cream colored cat with pale green eyes sitting politely">
+            <img src="assets/images/cat-2.jpg" alt="tabby cat with green eyes meowing">
+            <img src="assets/images/cat-3.jpg" alt="tortoise shell cat with bright greeneyes sticking tongue out">
+            <img src="assets/images/cat-4.jpg" alt="striped pattern cat looking up with wide eyes">
+            <img src="assets/images/yawning-cats.jpg" alt="tabby and ginger cat yawning while relaxing on floor">
+            <img src="assets/images/Brownie.jpg" alt="brownie on plate">
+            <img src="assets/images/Coffee.jpg" alt="black coffee in a mug">
+            <img src="assets/images/cat-cafe-1.jpg" alt="two people sitting with cats while enjoying tea">
+            <img src="assets/images/cat-5.jpg" alt="large ginger cat sitting politely">
+            <img src="assets/images/cat-6.jpg" alt="cream colored cat falling asleep while sitting upright">
+            <img src="assets/images/cat-7.jpg" alt="ginger cat sitting on couch">
+            <img src="assets/images/cat-cafe-2.jpg" alt="two ladies with cats sitting on pillows at table">
+            <img src="assets/images/cat-cafe-3.jpg" alt="white fluffy cat eating something from the dinner table ">
+            <img src="assets/images/cat-cafe-4.jpg" alt="lady relaxing on a couch drinking coffee with a striped cat sitting on lap">
+            <img src="assets/images/Choc-cheesecake.jpg" alt="chocolate cheesecake with fork on plate">
+            <img src="assets/images/Mocha.jpg" alt="creamy mocha in a mug">
+            <img src="assets/images/cat-8.jpg" alt="black and white cat looking annoted at someone taking a photo of them sitting at table">
             </section>
 </header>
 
