--- a/index.html
+++ b/index.html
@@ -34,9 +34,44 @@
                 <h2>About Us   <i class="fa-solid fa-cat"></i></h2>
                 <hr>
             <p>We are a small charity cat cafe based in Dublin, serving coffee and baked goodies. We also host hangout sessions with the current kitty residences, you can book in to make a reservation. All profits go towards helping strays get back to good health and find forever homes. 
-                <br> Please feel free to contact us at catmosphere@catcafe.ie or follow our social media links below. We look forward to meeting meow.
+                <br>
+                <p>We look forward to seeing you soon</p>
+                <div>
+                    
+                    <iframe id="map" src=
+        "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2381.725895002301!2d-6.277648910342307!3d53.34816273807156!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670c2e5676f497%3A0x48212d7f556d1b57!2sProper%20Order%20Coffee%20Co!5e0!3m2!1sen!2sie!4v1670869070944!5m2!1sen!2sie"
+                            width="100%"
+                            height="500"
+                            frameborder="0"
+                            style="border:0;"
+                            allowfullscreen=""
+                            aria-hidden="false"
+                            tabindex="0">
+                    </iframe>
+                </div>
+                <br>
+                <br> 
+                <ul class="social-network"> 
+                    <li>    
+                    <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in new tab)"> <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    </li>
+                    <li>    
+                    <a href="https://Twitter.com" target="_blank" rel="noopener" aria-label="visit our Twitter page (opens in new tab)"> <i class="fa-brands fa-square-twitter"></i>
+                    </a>
+                    </li>
+                    <li>    
+                    <a href="https://Youtube.com" target="_blank" rel="noopener" aria-label="visit our Youtube page (opens in new tab)"> <i class="fa-brands fa-youtube"></i>
+                    </a>
+                    </li>
+                    <li>    
+                    <a href="https://Instagram.com" target="_blank" rel="noopener" aria-label="visit our Instagram page (opens in new tab)"> <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    </li>
+            
+                </ul>
             </p>
-        </div>
+        </div><hr>
         <div class="house-rules">
             <h2>House rules   <i class="fa-solid fa-scale-balanced"></i></h2>
             <hr>
@@ -48,19 +83,19 @@
             <br>
         No flash photography.
         </p>
-    </div>
+    </div><hr>
         </div>
         <div id=>
             <div class="menu">
                 <h2>Menu   <i class="fa-solid fa-mug-hot"></i></h2>
                 <hr>
                 <p><a href="menu.html">Check out our menu</a> </p>
-            </div>
+            </div><hr>
             <div class="booking">
                 <h2>Book In    <i class="fa-solid fa-book"></i></h2>
                 <hr>
                 <p><a href="book-in.html">Make a booking</a></p>
-            </div>
+            </div><hr>
         </div>
 </header>
 </section>
