add media queries

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <div class="what-we-do">
                 <h2>About Us   <i class="fa-solid fa-cat"></i></h2>
                 <hr>
-            <p>We are a small charity cat cafe based in Dublin, serving coffee and baked goodies. We also host hangout sessions with the current kitty residences, you can book in to make a reservation. All profits go towards helping strays get back to good health and find forever homes. 
+            <p>We are a small cat cafe based in Dublin, serving coffee and baked goodies. We also host hangout sessions with the current kitty residences, you can book in to make a reservation. All profits go towards helping strays get back to good health and find forever homes. 
                 <br>
-                <p>We look forward to seeing you soon</p>
+                <p>We look forward to seeing you soon.</p>
                 <div>
                     
                     <iframe id="map" src=
@@ -75,26 +75,27 @@
         <div class="house-rules">
             <h2>House rules   <i class="fa-solid fa-scale-balanced"></i></h2>
             <hr>
-        <p>We respectfully request that visitors leave their dogs at home.
+        <p>- We respectfully request that visitors leave their dogs at home.
             <br>
-        Catnip is strictly prohibited within the property, its not that kind of cafe.
+        - Catnip is strictly prohibited within the property, its not that kind of cafe.
             <br>
-        Please do not feed the cat inhabitants no matter how hard they may persuade you, they are well fed.
+        - Please do not feed the cat inhabitants no matter how hard they may persuade you, they are well fed.
             <br>
-        No flash photography.
+        - No flash photography.
         </p>
     </div><hr>
         </div>
         <div id=>
-            <div class="menu">
+            <div class="cafe-menu">
                 <h2>Menu   <i class="fa-solid fa-mug-hot"></i></h2>
                 <hr>
-                <p><a href="menu.html">Check out our menu</a> </p>
+                <p> Here at Catmosphere we offer a wide selection of hot drinks and baked goodies to raise funds to support our resident cats.<br><a href="menu.html">Check out our menu</a> </p>
             </div><hr>
             <div class="booking">
                 <h2>Book In    <i class="fa-solid fa-book"></i></h2>
                 <hr>
-                <p><a href="book-in.html">Make a booking</a></p>
+                <p>We host hangout sessions with the resident cats so that customers can meet them,show affection and maybe even adopt them.<br>We strongly advise making a booking with us to avoid dissapointment and to give the cats some time to groom themselves before visitors arrive.
+                <br><a href="book-in.html">Make a booking</a></p>
             </div><hr>
         </div>
 </header>
