--- a/book-in.html
+++ b/book-in.html
@@ -33,7 +33,7 @@
     <form action="reservation.php" method="post">
         <div class="elem-group">
           <label for="name">Your Name</label>
-          <input type="text" id="name" name="visitor_name" placeholder="John Doe" pattern=[A-Z\sa-z]{3,20} required>
+          <input type="text" id="name" name="visitor_name" placeholder="Charlie Day" pattern=[A-Z\sa-z]{3,20} required>
         </div>
         <div class="elem-group">
           <label for="email">Your E-mail</label>
