--- a/book-in.html
+++ b/book-in.html
@@ -47,7 +47,7 @@
           <input type="number" id="adult" name="total_adults" placeholder="0" min="1" required>
         </div>
         <div class="elem-group inlined">
-          <label for="child">Children</label>
+          <label id="child">Children</label>
           <input type="number" id="child" name="total_children" placeholder="0" min="0" required>
         </div>
         <div class="elem-group inlined">
@@ -55,7 +55,7 @@
           <input type="date" id="booking-date" name="checkin" required>
         </div>
         <div class="elem-group inlined">
-          <label for="checkout-date">Booking Time</label>
+          <label id="checkout-date">Booking Time</label>
           <input type="time" id="booking-time" name="time" required>
         </div>
         <div class="elem-group">
@@ -75,7 +75,6 @@
       </form>
 </header>
 
-</section>
 
 <footer>
     <ul class="social-networks"> 
