--- a/book-in.html
+++ b/book-in.html
@@ -47,11 +47,11 @@
           <input type="number" id="adult" name="total_adults" placeholder="0" min="1" required>
         </div>
         <div class="elem-group inlined">
-          <label id="child">Children</label>
+          <label id="child-amount">Children</label>
           <input type="number" id="child" name="total_children" placeholder="0" min="0" required>
         </div>
         <div class="elem-group inlined">
-          <label for="checkin-date">Booking Date</label>
+          <label id="checkin-date">Booking Date</label>
           <input type="date" id="booking-date" name="checkin" required>
         </div>
         <div class="elem-group inlined">
